# gcp-cloud-logger

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
gcp_cloud_logger/: __init__.py
gcp_cloud_logger/core/: cloud_logger.py
google_cloud_logger/: __init__.py
tests/: test_gcp_cloud_logger.py  test_google_cloud_logger.py
